feat: manual correction metering point - menu items if fas + bff api

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -680,6 +680,13 @@
         "actualAddress": "{{ meteringPoint.overview.shared.actualAddress }}",
         "notActualAddress": "{{ meteringPoint.overview.shared.notActualAddress }}",
         "closeButton": "{{ meteringPoint.overview.shared.closeButton }}"
+      },
+      "manualCorrection": {
+        "getMeteringPoint": "Download metering point",
+        "verifyCorrection": "Verify manual correction",
+        "executeCorrection": "Apply manual correction",
+        "saveSuccess": "Manual correction of metering point applied",
+        "saveError": "Manual correction of metering point failed"
       }
     },
     "relatedMeteringPointsTitle": "Related metering points",
