feat: adds route for customer data

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -882,7 +882,8 @@
       "moveInSuccess": "Tilflytning er nu registreret",
       "customerDataSuccess": "Kundestamdata opdatering er nu registreret",
       "save": "Tilflyt kunde",
-      "send": "Indsend"
+      "send": "Indsend",
+      "cancel": "Annuller"
     },
     "create": {
       "modal": {
