feat: manual correction metering point - menu items if fas + bff api (#5008)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dzhavat Ushev <dzu@energinet.dk>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -687,6 +687,13 @@
         "actualAddress": "{{ meteringPoint.overview.shared.actualAddress }}",
         "notActualAddress": "{{ meteringPoint.overview.shared.notActualAddress }}",
         "closeButton": "{{ meteringPoint.overview.shared.closeButton }}"
+      },
+      "manualCorrection": {
+        "getMeteringPoint": "Hent målepunkt",
+        "verifyCorrection": "Verificer manuel korrigering",
+        "executeCorrection": "Gennemfør manuel korrigering",
+        "saveSuccess": "Manuel korrigering af målepunkt gennemført",
+        "saveError": "Manuel korrigering af målepunkt mislykkedes"
       }
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
