--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -2890,6 +2890,9 @@
     "meteringPoint": {
       "tabLabel": "Målepunkt"
     },
+    "meteringPoint-v2": {
+      "tabLabel": "Målepunkt (v2)"
+    },
     "meteringPoints": {
       "tabLabel": "Målepunkter",
       "gridArea": "Netområde",
