--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -2889,8 +2889,8 @@
     "meteringPoint": {
       "tabLabel": "Metering point"
     },
-    "meteringPoint-v2": {
-      "tabLabel": "Metering point (v2)"
+    "meteringPointEvents": {
+      "tabLabel": "Metering point events"
     },
     "meteringPoints": {
       "tabLabel": "Metering points",
