--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -423,32 +423,34 @@
         }
       }
     },
-    "create": {
-      "action": {
-        "SUBSCRIPTION": "Nyt abonnement",
-        "FEE": "Nyt gebyr",
-        "TARIFF": "Ny tarif",
-        "TARIFF_TAX": "Ny tarif, afgift",
-        "SELECTION": "Ny pris"
-      },
-      "close": "Luk",
-      "form": {
-        "id": "ID",
-        "name": "Navn",
-        "description": "Beskrivelse",
-        "resolution": "Opløsning",
-        "hourly": "Time",
-        "daily": "Dag",
-        "vat": "Moms",
-        "withVat": "Med moms",
-        "withoutVat": "Uden moms",
-        "transparentInvoicing": "Viderefakturering",
-        "withTransparentInvoicing": "Ja",
-        "withoutTransparentInvoicing": "Nej",
-        "predictablePrice": "Forudsigelig pris",
-        "withPredictablePrice": "Ja",
-        "withoutPredictablePrice": "Nej",
-        "validFrom": "Gyldig fra"
+    "actions": {
+      "create": {
+        "action": {
+          "SUBSCRIPTION": "Nyt abonnement",
+          "FEE": "Nyt gebyr",
+          "TARIFF": "Ny tarif",
+          "TARIFF_TAX": "Ny tarif, afgift",
+          "SELECTION": "Ny pris"
+        },
+        "close": "Luk",
+        "form": {
+          "id": "ID",
+          "name": "Navn",
+          "description": "Beskrivelse",
+          "resolution": "Opløsning",
+          "hourly": "Time",
+          "daily": "Dag",
+          "vat": "Moms",
+          "withVat": "Med moms",
+          "withoutVat": "Uden moms",
+          "transparentInvoicing": "Viderefakturering",
+          "withTransparentInvoicing": "Ja",
+          "withoutTransparentInvoicing": "Nej",
+          "predictablePrice": "Forudsigelig pris",
+          "withPredictablePrice": "Ja",
+          "withoutPredictablePrice": "Nej",
+          "validFrom": "Gyldig fra"
+        }
       }
     },
     "charge": {
