--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -451,6 +451,12 @@
           "withoutPredictablePrice": "Nej",
           "validFrom": "Gyldig fra"
         }
+      },
+      "stop": {
+        "title": "Stop prisinformation",
+        "date": "Stopdato",
+        "submit": "Gem ændringer",
+        "close": "Luk"
       }
     },
     "charge": {
