--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -450,6 +450,12 @@
           "withoutPredictablePrice": "No",
           "validFrom": "Valid From"
         }
+      },
+      "stop": {
+        "title": "Stop price",
+        "date": "Stop date",
+        "submit": "Save changes",
+        "close": "Close"
       }
     },
     "charge": {
