--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -630,7 +630,7 @@
         "upload": "Upload måledata",
         "moveIn": "Tilflyt kunde",
         "createChargeLink": "Tilknyt pris",
-        "changeConnectionStatus": "Ændre tilslutningstatus"
+        "changeConnectionStatus": "Ændr tilslutningstatus"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
@@ -1073,7 +1073,7 @@
       "modalTitle": "{{ meteringPoint.overview.actions.changeConnectionStatus }}",
       "connectionStateLabel": "Tilslutningsstatus",
       "validityDate": "Gyldighedsdato",
-      "cancel": "Annuler",
+      "cancel": "Annuller",
       "save": "Gem ændringer"
     }
   },
