--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -635,7 +635,8 @@
         "actionsButton": "Handlinger",
         "upload": "Upload måledata",
         "moveIn": "Tilflyt kunde",
-        "createChargeLink": "Tilknyt pris"
+        "createChargeLink": "Tilknyt pris",
+        "changeConnectionStatus": "Ændr tilslutningstatus"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
@@ -1073,6 +1074,13 @@
         "containsLetters": "{{ meteringPoint.shared.error.containsLetters }}",
         "meteringPointIdLength": "{{ meteringPoint.shared.error.meteringPointIdLength }}"
       }
+    },
+    "changeConnectionState": {
+      "modalTitle": "{{ meteringPoint.overview.actions.changeConnectionStatus }}",
+      "connectionStateLabel": "Tilslutningsstatus",
+      "validityDate": "Gyldighedsdato",
+      "cancel": "Annuller",
+      "save": "Gem ændringer"
     }
   },
   "messageArchive": {
