feat(dh, wholesale): show failed metering points when BRS-21 calculations is incomplete

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -2391,6 +2391,7 @@
         "period": "Beregningsperiode",
         "startedBy": "Bestilt af",
         "calculationId": "Beregnings-ID",
+        "orchestrationInstanceId": "Orkestreringsinstans-ID",
         "executionType": "Afviklingstype",
         "executionTime": "Afviklingstidspunkt",
         "gridAreas": "Netområder",
@@ -2410,6 +2411,10 @@
         }
       },
       "steps": {
+        "errors": {
+          "FAILED_ENQUEUE_MEASUREMENTS": "Kunne ikke sætte målinger i kø for {{count}} målepunkter",
+          "meteringPointIds": "Målepunkt ID'er"
+        },
         "0": {
           "pending": "Afventer planlægning",
           "running": "Planlægger",
