fix(dh): improvements to connection state change

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1111,6 +1111,7 @@
     },
     "changeConnectionState": {
       "modalTitle": "{{ meteringPoint.overview.actions.changeConnectionStatus }}",
+      "tooltip": "Processen tager få minutter. Det ønskede \n resultat vises her, og afvisningsårsager \n findes i forretningsbeskeder.",
       "connectionStateLabel": "Tilslutningsstatus",
       "validityDate": "Gyldighedsdato",
       "cancel": "Annuller",
