chore: updates address details form to match correct inputs and design

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -963,6 +963,7 @@
           "country": "Land",
           "streetCode": "Vejkode",
           "citySubdivisionName": "Supplerende bynavn",
+          "postalDistrict": "Postdistrikt",
           "postBox": "Postboks",
           "municipalityCode": "Kommunekode",
           "municipalityCodeError": {
