--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -961,6 +961,7 @@
           "country": "Country",
           "streetCode": "Street code",
           "citySubdivisionName": "Additional city name",
+          "postalDistrict": "Postal district",
           "postBox": "Post box",
           "municipalityCode": "Municipality code",
           "municipalityCodeError": {
