feat: adds new customer details forms

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -921,11 +921,11 @@
           "customerInformation": "Kundeoplysninger",
           "private": "Privat",
           "business": "Erhverv",
-          "name1": "Kundenavn",
+          "name1": "Kundenavn 1",
           "cpr1": "CPR 1",
           "name2": "Kundenavn 2",
           "cpr2": "CPR 2",
-          "companyName": "Kundenavn",
+          "companyName": "Navn",
           "cvr": "CVR",
           "foreignCompany": "Udenlandsk virksomhed",
           "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
