--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -843,10 +843,10 @@
         "FAS_CANCEL_WORKFLOW": "Grid operator and electricity supplier can cancel workflow"
       },
       "steps": {
-        "RSM005_REQUEST": "Request end of supply (RSM-005)",
-        "RSM005_CONFIRM": "Confirm end of supply (RSM-005)",
-        "RSM005_REJECT": "Reject end of supply (RSM-005)",
-        "RSM020_REQUEST": "Notify cancellation of end of supply (RSM-020)",
+        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_1": "Request end of supply (RSM-005)",
+        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_2": "Confirm end of supply (RSM-005)",
+        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_3": "Reject end of supply (RSM-005)",
+        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_4": "Notify cancellation of end of supply (RSM-020)",
         "UNKNOWN": "Unknown Step"
       },
       "details": {
